syntax = "proto3";

package auth;

service AuthService {
  rpc SignIn (SignInDto) returns (SignInHttpResponse) {}
  rpc SignUp(SignUpDto) returns (SignUpHttpResponse) {} 
}

message SignInDto {
    string email = 1;
    string password = 2;
}

message SignUpDto {
  string username = 1;
  optional string firstName = 2;
  optional string lastName = 3;
  string email = 4;
  string password = 5;

}

message SignUpHttpResponse {
  string id = 1;
  optional string firstName = 2;
  optional string lastName = 3;
  string username = 4;
  string email = 5;
}

message SignInHttpResponse {
  string id = 1;
  optional string firstName = 2;
  optional string lastName = 3;
  string username = 4;
  string email = 5;
  string token = 6;
}